--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 </head>
 <body>
     <!-- HEADER -->
-    <header></header>
+    <header>
+        <section class="navbar debug">
+            <div class="nav-category">
+                <a href="#">Uomo</a>
+                <a href="#">Donna</a>
+                <a href="#">Bambino</a>
+            </div>
+            <div class="logo">Logo</div>
+            <div class="nav-icon">
+                <a href="#">Icona</a>
+                <a href="#">Icona</a>
+                <a href="#">Icona</a>
+            </div>
+        </section>
+    </header>
 
     <!-- MAIN -->
     <main></main>
