--- a/index.html
+++ b/index.html
@@ -28,7 +28,64 @@
     </header>
 
     <!-- MAIN -->
-    <main></main>
+    <main>
+       <section class="prd">
+            <section class="container-prd debug">
+                <section class="row-prd">
+                    <section class="col-1_3">
+                        <figure><img src="" alt=""></figure>
+                        <div>
+                            <p>Marca</p>
+                            <strong>PRODOTTO</strong>
+                            <P>&euro; Prezzo</P>
+                        </div>
+                    </section>
+                    <section class="col-1_3">
+                        <figure><img src="" alt=""></figure>
+                        <div>
+                            <p>Marca</p>
+                            <strong>PRODOTTO</strong>
+                            <P>&euro; Prezzo</P>
+                        </div>
+                    </section>
+                    <section class="col-1_3">
+                        <figure><img src="" alt=""></figure>
+                        <div>
+                            <p>Marca</p>
+                            <strong>PRODOTTO</strong>
+                            <P>&euro; Prezzo</P>
+                        </div>
+                    </section>
+                    <section class="col-1_3">
+                        <figure><img src="" alt=""></figure>
+                        <div>
+                            <p>Marca</p>
+                            <strong>PRODOTTO</strong>
+                            <P>&euro; Prezzo</P>
+                        </div>
+                    </section>
+                    <section class="col-1_3">
+                        <figure><img src="" alt=""></figure>
+                        <div>
+                            <p>Marca</p>
+                            <strong>PRODOTTO</strong>
+                            <P>&euro; Prezzo</P>
+                        </div>
+                    </section>
+                    <section class="col-1_3">
+                        <figure><img src="" alt=""></figure>
+                        <div>
+                            <p>Marca</p>
+                            <strong>PRODOTTO</strong>
+                            <P>&euro; Prezzo</P>
+                        </div>
+                    </section>
+                </section>
+
+            </section>
+
+       </section> 
+    </main>
 
     <!-- FOOTER -->
      <footer></footer>
