feat structure column

--- a/index.html
+++ b/index.html
@@ -31,50 +31,50 @@
     <main>
        <section class="prd">
             <section class="container-prd debug">
-                <section class="row-prd">
+                <section class="row-prd debug">
                     <section class="col-1_3">
-                        <figure><img src="" alt=""></figure>
-                        <div>
+                        <figure class="img-col"><img src="./img/1.webp" alt=""></figure>
+                        <div class="info-prd">
                             <p>Marca</p>
                             <strong>PRODOTTO</strong>
                             <P>&euro; Prezzo</P>
                         </div>
                     </section>
                     <section class="col-1_3">
-                        <figure><img src="" alt=""></figure>
-                        <div>
+                        <figure class="img-col"><img src="" alt=""></figure>
+                        <div class="info-prd">
                             <p>Marca</p>
                             <strong>PRODOTTO</strong>
                             <P>&euro; Prezzo</P>
                         </div>
                     </section>
                     <section class="col-1_3">
-                        <figure><img src="" alt=""></figure>
-                        <div>
+                        <figure class="img-col"><img src="" alt=""></figure>
+                        <div class="info-prd">
                             <p>Marca</p>
                             <strong>PRODOTTO</strong>
                             <P>&euro; Prezzo</P>
                         </div>
                     </section>
                     <section class="col-1_3">
-                        <figure><img src="" alt=""></figure>
-                        <div>
+                        <figure class="img-col"><img src="" alt=""></figure>
+                        <div class="info-prd">
                             <p>Marca</p>
                             <strong>PRODOTTO</strong>
                             <P>&euro; Prezzo</P>
                         </div>
                     </section>
                     <section class="col-1_3">
-                        <figure><img src="" alt=""></figure>
-                        <div>
+                        <figure class="img-col"><img src="" alt=""></figure>
+                        <div class="info-prd">
                             <p>Marca</p>
                             <strong>PRODOTTO</strong>
                             <P>&euro; Prezzo</P>
                         </div>
                     </section>
                     <section class="col-1_3">
-                        <figure><img src="" alt=""></figure>
-                        <div>
+                        <figure class="img-col"><img src="" alt=""></figure>
+                        <div class="info-prd">
                             <p>Marca</p>
                             <strong>PRODOTTO</strong>
                             <P>&euro; Prezzo</P>
