add img & txt column

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </div>
                     </section>
                     <section class="col-1_3">
-                        <figure class="img-col"><img src="" alt=""></figure>
+                        <figure class="img-col"><img src="./img/2.webp" alt=""></figure>
                         <div class="info-prd">
                             <p>Marca</p>
                             <strong>PRODOTTO</strong>
@@ -49,7 +49,7 @@
                         </div>
                     </section>
                     <section class="col-1_3">
-                        <figure class="img-col"><img src="" alt=""></figure>
+                        <figure class="img-col"><img src="./img/3.webp" alt=""></figure>
                         <div class="info-prd">
                             <p>Marca</p>
                             <strong>PRODOTTO</strong>
@@ -57,7 +57,7 @@
                         </div>
                     </section>
                     <section class="col-1_3">
-                        <figure class="img-col"><img src="" alt=""></figure>
+                        <figure class="img-col"><img src="./img/4.webp" alt=""></figure>
                         <div class="info-prd">
                             <p>Marca</p>
                             <strong>PRODOTTO</strong>
@@ -65,7 +65,7 @@
                         </div>
                     </section>
                     <section class="col-1_3">
-                        <figure class="img-col"><img src="" alt=""></figure>
+                        <figure class="img-col"><img src="./img/5.webp" alt=""></figure>
                         <div class="info-prd">
                             <p>Marca</p>
                             <strong>PRODOTTO</strong>
@@ -73,7 +73,7 @@
                         </div>
                     </section>
                     <section class="col-1_3">
-                        <figure class="img-col"><img src="" alt=""></figure>
+                        <figure class="img-col"><img src="./img/6.webp" alt=""></figure>
                         <div class="info-prd">
                             <p>Marca</p>
                             <strong>PRODOTTO</strong>
@@ -88,6 +88,8 @@
     </main>
 
     <!-- FOOTER -->
-     <footer></footer>
+     <footer class="">
+
+     </footer>
 </body>
 </html>
