--- a/index.html
+++ b/index.html
@@ -88,7 +88,19 @@
     </main>
 
     <!-- FOOTER -->
-     <footer class="">
+     <footer class="social-ft debug">
+        <div>
+            <strong>Boolando</strong>
+            <p>Lorem ipsum dolor sit.</p>
+        </div>
+        <div>
+            <p>Lorem, ipsum.</p>
+            <a href="#">Icona</a>
+            <a href="#">Icona</a>
+            <a href="#">Icona</a>
+            <a href="#">Icona</a>
+            <a href="#">Icona</a>
+        </div>
 
      </footer>
 </body>
