add heart - position

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <section class="container-prd debug">
                 <section class="row-prd debug">
                     <section class="col-1_3">
+                        <div class="container-heart">
+                            <a href="#"><img class="heart" src="./icon/favorite_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt=""></a>
+                        </div>
                         <figure class="img-col"><img src="./img/1.webp" alt=""></figure>
                         <div class="info-prd">
                             <p>Marca</p>
@@ -41,6 +44,9 @@
                         </div>
                     </section>
                     <section class="col-1_3">
+                        <div class="container-heart">
+                            <a href="#"><img class="heart" src="./icon/favorite_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt=""></a>
+                        </div>
                         <figure class="img-col"><img src="./img/2.webp" alt=""></figure>
                         <div class="info-prd">
                             <p>Marca</p>
@@ -49,6 +55,9 @@
                         </div>
                     </section>
                     <section class="col-1_3">
+                        <div class="container-heart">
+                            <a href="#"><img class="heart" src="./icon/favorite_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt=""></a>
+                        </div>
                         <figure class="img-col"><img src="./img/3.webp" alt=""></figure>
                         <div class="info-prd">
                             <p>Marca</p>
@@ -57,6 +66,9 @@
                         </div>
                     </section>
                     <section class="col-1_3">
+                        <div class="container-heart">
+                            <a href="#"><img class="heart" src="./icon/favorite_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt=""></a>
+                        </div>
                         <figure class="img-col"><img src="./img/4.webp" alt=""></figure>
                         <div class="info-prd">
                             <p>Marca</p>
@@ -65,6 +77,9 @@
                         </div>
                     </section>
                     <section class="col-1_3">
+                        <div class="container-heart">
+                            <a href="#"><img class="heart" src="./icon/favorite_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt=""></a>
+                        </div>
                         <figure class="img-col"><img src="./img/5.webp" alt=""></figure>
                         <div class="info-prd">
                             <p>Marca</p>
@@ -73,6 +88,9 @@
                         </div>
                     </section>
                     <section class="col-1_3">
+                        <div class="container-heart">
+                            <a href="#"><img class="heart" src="./icon/favorite_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt=""></a>
+                        </div>
                         <figure class="img-col"><img src="./img/6.webp" alt=""></figure>
                         <div class="info-prd">
                             <p>Marca</p>
@@ -81,9 +99,7 @@
                         </div>
                     </section>
                 </section>
-
-            </section>
-
+            </section>   
        </section> 
     </main>
 
