--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                             <a href="#"><img class="heart" src="./icon/favorite_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt=""></a>
                         </div>
                         <figure class="img-col"><img src="./img/1.webp" alt=""></figure>
+                        <div class="container-info-prd">
+                            <h4 class="info-patch-euro">-50%</h4>
+                        </div>
                         <div class="info-prd">
                             <p>Marca</p>
                             <strong>PRODOTTO</strong>
