--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
                         <figure class="img-col"><img src="./img/1.webp" alt=""></figure>
                         <div class="container-info-prd">
                             <h4 class="info-patch-euro">-50%</h4>
+                            <h4 class="info-patch-eco">Sostenibilità</h4>
                         </div>
                         <div class="info-prd">
                             <p>Marca</p>
-                            <strong>PRODOTTO</strong>
+                            <strong class="prd-bold">PRODOTTO</strong>
                             <P>&euro; Prezzo</P>
                         </div>
                     </section>
@@ -51,9 +52,12 @@
                             <a href="#"><img class="heart" src="./icon/favorite_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt=""></a>
                         </div>
                         <figure class="img-col"><img src="./img/2.webp" alt=""></figure>
+                        <div class="container-info-prd">
+                            <h4 class="info-patch-euro">-50%</h4>
+                        </div>
                         <div class="info-prd">
                             <p>Marca</p>
-                            <strong>PRODOTTO</strong>
+                            <strong class="prd-bold">PRODOTTO</strong>
                             <P>&euro; Prezzo</P>
                         </div>
                     </section>
@@ -62,9 +66,12 @@
                             <a href="#"><img class="heart" src="./icon/favorite_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt=""></a>
                         </div>
                         <figure class="img-col"><img src="./img/3.webp" alt=""></figure>
+                        <div class="container-info-prd">
+                            <h4 class="info-patch-euro">-30%</h4>
+                        </div>
                         <div class="info-prd">
                             <p>Marca</p>
-                            <strong>PRODOTTO</strong>
+                            <strong class="prd-bold">PRODOTTO</strong>
                             <P>&euro; Prezzo</P>
                         </div>
                     </section>
@@ -73,9 +80,13 @@
                             <a href="#"><img class="heart" src="./icon/favorite_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt=""></a>
                         </div>
                         <figure class="img-col"><img src="./img/4.webp" alt=""></figure>
+                        <div class="container-info-prd">
+                            <h4 class="info-patch-euro">-50%</h4>
+                            <h4 class="info-patch-eco">Sostenibilità</h4>
+                        </div>
                         <div class="info-prd">
                             <p>Marca</p>
-                            <strong>PRODOTTO</strong>
+                            <strong class="prd-bold">PRODOTTO</strong>
                             <P>&euro; Prezzo</P>
                         </div>
                     </section>
@@ -86,7 +97,7 @@
                         <figure class="img-col"><img src="./img/5.webp" alt=""></figure>
                         <div class="info-prd">
                             <p>Marca</p>
-                            <strong>PRODOTTO</strong>
+                            <strong class="prd-bold">PRODOTTO</strong>
                             <P>&euro; Prezzo</P>
                         </div>
                     </section>
@@ -95,9 +106,12 @@
                             <a href="#"><img class="heart" src="./icon/favorite_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt=""></a>
                         </div>
                         <figure class="img-col"><img src="./img/6.webp" alt=""></figure>
+                        <div class="container-info-prd">
+                            <h4 class="info-patch-eco col6">Sostenibilità</h4>
+                        </div>
                         <div class="info-prd">
                             <p>Marca</p>
-                            <strong>PRODOTTO</strong>
+                            <strong class="prd-bold">PRODOTTO</strong>
                             <P>&euro; Prezzo</P>
                         </div>
                     </section>
