feat txt column

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                             <h4 class="info-patch-eco">Sostenibilità</h4>
                         </div>
                         <div class="info-prd">
-                            <p>Marca</p>
-                            <strong class="prd-bold">PRODOTTO</strong>
-                            <P>&euro; Prezzo</P>
+                            <p>Levi's</p>
+                            <p class="prd-bold">RELAXED FIT TEE UNISEX</p>
+                            <strong class="price">14,99&euro; </strong><strong class="price-old">29,99&euro;</strong>
                         </div>
                     </section>
                     <section class="col-1_3">
@@ -56,9 +56,9 @@
                             <h4 class="info-patch-euro">-50%</h4>
                         </div>
                         <div class="info-prd">
-                            <p>Marca</p>
-                            <strong class="prd-bold">PRODOTTO</strong>
-                            <P>&euro; Prezzo</P>
+                            <p>Guess</p>
+                            <p class="prd-bold">ROSES TEE</p>
+                            <strong class="price">20,99&euro; </strong><strong class="price-old">29,99&euro;</strong>
                         </div>
                     </section>
                     <section class="col-1_3">
@@ -70,9 +70,9 @@
                             <h4 class="info-patch-euro">-30%</h4>
                         </div>
                         <div class="info-prd">
-                            <p>Marca</p>
-                            <strong class="prd-bold">PRODOTTO</strong>
-                            <P>&euro; Prezzo</P>
+                            <p>Come zucchero filato</p>
+                            <p class="prd-bold">VOGLIA DI COLORI PASTELLO</p>
+                            <strong class="price">129,99&euro; </strong><strong class="price-old">184,99&euro;</strong>
                         </div>
                     </section>
                     <section class="col-1_3">
@@ -85,9 +85,9 @@
                             <h4 class="info-patch-eco">Sostenibilità</h4>
                         </div>
                         <div class="info-prd">
-                            <p>Marca</p>
-                            <strong class="prd-bold">PRODOTTO</strong>
-                            <P>&euro; Prezzo</P>
+                            <p>Levi's</p>
+                            <p class="prd-bold">RELAXED FIT TEE UNISEX</p>
+                            <strong class="price">14,99&euro; </strong><strong class="price-old">29,99&euro;</strong>
                         </div>
                     </section>
                     <section class="col-1_3">
@@ -96,9 +96,9 @@
                         </div>
                         <figure class="img-col"><img src="./img/5.webp" alt=""></figure>
                         <div class="info-prd">
-                            <p>Marca</p>
-                            <strong class="prd-bold">PRODOTTO</strong>
-                            <P>&euro; Prezzo</P>
+                            <p>Levi's</p>
+                            <p class="prd-bold">RELAXED FIT TEE UNISEX</p>
+                            <strong class="price">14,99&euro; </strong><strong class="price-old">29,99&euro;</strong>
                         </div>
                     </section>
                     <section class="col-1_3">
@@ -110,9 +110,9 @@
                             <h4 class="info-patch-eco col6">Sostenibilità</h4>
                         </div>
                         <div class="info-prd">
-                            <p>Marca</p>
-                            <strong class="prd-bold">PRODOTTO</strong>
-                            <P>&euro; Prezzo</P>
+                            <p>Levi's</p>
+                            <p class="prd-bold">RELAXED FIT TEE UNISEX</p>
+                            <strong class="price">14,99&euro; </strong><strong class="price-old">29,99&euro;</strong>
                         </div>
                     </section>
                 </section>
