add icon navbar

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head>
 <body>
     <!-- HEADER -->
-    <header>
+    <header class="nav-header">
         <section class="navbar debug">
             <div class="nav-category">
                 <a href="#">Uomo</a>
                 <a href="#">Donna</a>
                 <a href="#">Bambino</a>
             </div>
-            <div class="logo">Logo</div>
+            <div class="logo"><a href="#"><img src="./img/boolean-logo.png" alt=""></a></div>
             <div class="nav-icon">
-                <a href="#">Icona</a>
-                <a href="#">Icona</a>
-                <a href="#">Icona</a>
+                <a href="#"><img class="icon" src="./icon/person_16dp_5F6368_FILL0_wght400_GRAD0_opsz20.svg" alt=""></a>
+                <a href="#"><img class="icon" src="./icon/favorite_16dp_5F6368_FILL0_wght400_GRAD0_opsz20.svg" alt=""></a>
+                <a href="#"><img class="icon" src="./icon/shopping_bag_16dp_5F6368_FILL0_wght400_GRAD0_opsz20.svg" alt=""></a>
             </div>
         </section>
     </header>
