--- a/index.html
+++ b/index.html
@@ -122,12 +122,14 @@
 
     <!-- FOOTER -->
      <footer class="social-ft debug">
-        <div>
-            <strong>Boolando</strong>
-            <p>Lorem ipsum dolor sit.</p>
+        <div class="info-footer">
+            <h3>Boolando</h3>
+            <a href="#">Informazioni legali </a>
+            <a href="#">Informativa sulla privacy </a>
+            <a href="#">Diritto di recesso </a>
         </div>
-        <div>
-            <p>Lorem, ipsum.</p>
+        <div class="info-footer">
+            <p>Trovaci anche su</p>
             <a href="#">Icona</a>
             <a href="#">Icona</a>
             <a href="#">Icona</a>
