add hover image

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <div class="container-heart">
                             <a href="#"><img class="heart" src="./icon/favorite_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt=""></a>
                         </div>
-                        <figure class="img-col"><img src="./img/1.webp" alt=""></figure>
+                        <figure class="img-col-1"><img src="./img/1.webp" alt=""></figure>
                         <div class="container-info-prd">
                             <h4 class="info-patch-euro">-50%</h4>
                             <h4 class="info-patch-eco">Sostenibilità</h4>
